css/popup.css
body {
    min-width: 400px;
}

.container {
    margin-bottom: 2px;
    min-height: 200px;
}

div.btn.btn-success {
    float: right;
}

.blocked {
    font-size: 20px;
    height: 50px;
}

div.list {
    padding-right: 10px;
    height: 162px;
    overflow: auto;
}

div.list::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    border-radius: 10px;
    background-color: #F5F5F5;
}

div.list::-webkit-scrollbar {
    width: 8px;
    background-color: #F5F5F5;
}

div.list::-webkit-scrollbar-thumb {
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
    background-color: #555;
}

div.btn-group {
    padding: 10px 0;
}

.import input {
    opacity: 0;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
}

.panel-body {
    width: 100%;
    padding-top: 0;
    padding-left: 0;
    padding-right: 0;
}

.input-group.form-group {
    margin-top: 10px;
}

#option .checkbox.btn {
    margin: 5px 0;
    border-radius: 4px;
}

